benetech/ServiceNet#1106: Fix font on firefox

--- a/src/main/webapp/app/modules/provider/provider-home.scss
+++ b/src/main/webapp/app/modules/provider/provider-home.scss
@@ -19,7 +19,7 @@
   }
 
   > * {
-    font-family: 'Muli', sans-serif;
+    font-family: 'Mulish', sans-serif;
   }
 
   .app-container {
@@ -367,7 +367,7 @@
 
   .btn {
     text-transform: capitalize;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Mulish', sans-serif;
     font-size: 13px;
   }
 
@@ -496,7 +496,7 @@
   min-height: calc(100% - 1.5rem);
   background: white;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  font-family: 'Muli', serif;
+  font-family: 'Mulish', sans-serif;
   font-size: 12px;
   box-shadow: 5px 5px 4px 0 rgba(0, 0, 0, 0.1);
 }
