--- a/src/main/webapp/app/modules/provider/record/record.scss
+++ b/src/main/webapp/app/modules/provider/record/record.scss
@@ -2,7 +2,7 @@
 @import '../../../bootstrap-variables';
 
 html {
-  font-family: 'Muli', serif;
+  font-family: 'Mulish', sans-serif;
   font-size: 16px;
   color: #333e50;
 }
